--- a/client/app.css
+++ b/client/app.css
@@ -77,6 +77,7 @@
 }
 
 .barBox {
+
   position: relative;
   width: 500px;
   height: 280px;
@@ -88,10 +89,7 @@
 }
 
 .barShelf {
-  background-image: url(woodshelf.jpg);
-  background-repeat: repeat;
-  background-size: 520px 111px;
-  background-position: 0% 32%;
+  background-image: url(cartoonshelf.jpg);
   width: 500px;
   height: 195px;
   padding-bottom: 50px;
@@ -101,16 +99,20 @@
   border-style: solid;
   border-color: rgb(177, 177, 177);
   box-shadow: 10px 10px 8px #888888;
-  background-color: rgb(255, 255, 255);
+  background-color: rgb(214, 233, 240);
 }
 
 /* Make the image responsive */
 .barImage {
   width: 80px;
-  filter: grayscale(30%);
+  filter: contrast(0%) sepia(0%);
 
 }
 
+.barCol {
+  display: flex;
+  flex-direction: column;
+}
 
 .barRow {
   padding-left: 50px;
