fix bug in searching form

--- a/client/utils/css/app.css
+++ b/client/utils/css/app.css
@@ -134,6 +134,15 @@
 	flex-direction: row;
 }
 
+.myProfile .barShelf {
+	width: 700px;
+	height: 300px;
+}
+
+.myProfile .barRow {
+	width: 620px;
+}
+
 .myProfile {
 	display: flex;
 	position: absolute;
