--- a/client/utils/css/app.css
+++ b/client/utils/css/app.css
@@ -2,8 +2,7 @@
 	display: flex;
 	justify-content: flex-start;
 	flex-direction: column;
-	border-color: black;
-	border: solid;
+
 }
 
 .discoverBox {
@@ -11,15 +10,13 @@
 	flex-wrap: wrap;
 	justify-content: flex-start;
 	flex-direction: column;
-	border-color: black;
-	border: solid;
+
 }
 
 .topBox {
 	display: flex;
 	flex-direction: row;
-	border-color: black;
-	border: solid;
+
 }
 
 .shakerBox {
@@ -57,7 +54,7 @@
 	padding-right: 5px;
 	padding-left: 15px;
 	color: rgb(255, 255, 255);
-	font-family: "Arial";
+	font-family: "Verdana";
 	display: flex;
 	justify-content: center;
 	font-size: 14px;
@@ -96,12 +93,10 @@
 	font-size: 14px;
 	color: rgb(101, 101, 101);
 	text-align: center;
-	font-family: "Arial";
-	font: "sans-serif";
+	font-family: "Verdana";
 }
 
 .barCol {
-
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: flex-start;
@@ -156,6 +151,7 @@
 	display: flex;
 	height: 30px;
 	width: 200px;
+	font-family: Verdana;
 }
 
 .myProfile .profileBar {
@@ -265,5 +261,23 @@ input:checked+.slider:before {
 	align-self: flex-start;
 	justify-content: center;
 	align-items: center;
-	font-size: 30pt;
+	font-size: 28pt;
+	font-family: Verdana;
+	padding-bottom: 10px;
+	padding-top: 10px;
+	color: #454545;
+	box-shadow: 0 4px 6px -6px black;
+}
+
+.drinkName {
+	display: flex;
+	align-self: flex-start;
+	justify-content: center;
+	align-items: center;
+	font-size: 10pt;
+	font-family: Verdana;
+	padding-bottom: 30px;
+	font-style: italic;
+	color: #454545;
+	padding-top: 10px;
 }
