--- a/client/src/utils/css/app.css
+++ b/client/src/utils/css/app.css
@@ -2,24 +2,22 @@
 	display: flex;
 	justify-content: flex-start;
 	flex-direction: column;
-	border-color: black;
-	border: solid;
+
 }
 
 .discoverBox {
+	background-color: rgb(247, 247, 247);
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: flex-start;
 	flex-direction: column;
-	border-color: black;
-	border: solid;
+
 }
 
 .topBox {
 	display: flex;
 	flex-direction: row;
-	border-color: black;
-	border: solid;
+
 }
 
 .shakerBox {
@@ -57,7 +55,7 @@
 	padding-right: 5px;
 	padding-left: 15px;
 	color: rgb(255, 255, 255);
-	font-family: "Arial";
+	font-family: "Verdana";
 	display: flex;
 	justify-content: center;
 	font-size: 14px;
@@ -86,7 +84,8 @@
 }
 
 .shakerImg {
-	width: 400px;
+	padding-left: 100px;
+	width: 200px;
 }
 
 .barBox {
@@ -94,14 +93,12 @@
 	width: 500px;
 	height: 280px;
 	font-size: 14px;
-	color: rgb(101, 101, 101);
+	color: rgb(84, 84, 84);
 	text-align: center;
-	font-family: "Arial";
-	font: "sans-serif";
+	font-family: "Verdana";
 }
 
 .barCol {
-
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: flex-start;
@@ -110,20 +107,16 @@
 }
 
 .barShelf {
-	/* background-image: url(woodshelf.jpg); */
-	background-image: "../images/woodshelf.jpg";
-	background-repeat: repeat;
-	background-size: 520px 111px;
-	background-position: 0% 32%;
 	width: 500px;
 	height: 195px;
 	padding-bottom: 50px;
 	padding-top: 20px;
 	border-radius: 5%;
 	border: 0.01px;
-	border-style: solid;
-	border-color: rgb(177, 177, 177);
-	box-shadow: 10px 10px 8px #888888;
+	border-style: dotted;
+	border-color: rgb(255, 255, 255);
+	box-shadow: 6px 6px 8px #888888;
+
 	background-color: rgb(255, 255, 255);
 	display: flex;
 }
@@ -133,6 +126,11 @@
 	display: flex;
 	width: 80px;
 	filter: grayscale(30%);
+	opacity: 0.9;
+}
+
+.barImage:hover {
+	opacity: 1.0;
 }
 
 .barRow {
@@ -156,6 +154,7 @@
 	display: flex;
 	height: 30px;
 	width: 200px;
+	font-family: Verdana;
 }
 
 .myProfile .profileBar {
@@ -265,5 +264,31 @@ input:checked+.slider:before {
 	align-self: flex-start;
 	justify-content: center;
 	align-items: center;
-	font-size: 30pt;
+	font-size: 28pt;
+	font-family: Verdana;
+	padding-bottom: 10px;
+	padding-top: 10px;
+	color: #454545;
+	box-shadow: 0 4px 6px -6px black;
+}
+
+.drinkName {
+	display: flex;
+	align-self: flex-start;
+	justify-content: center;
+	align-items: center;
+	font-size: 10pt;
+	font-family: Verdana;
+	padding-bottom: 30px;
+	font-style: italic;
+	color: #454545;
+	padding-top: 10px;
+}
+
+.navBar {
+	background-color: #7e7e7e;
+}
+
+.navBarLink {
+	color: white;
 }
