--- a/client/src/utils/css/app.css
+++ b/client/src/utils/css/app.css
@@ -1,65 +1,89 @@
-.bottomBox {
+.colBox {
+	box-shadow: 1px 1px 4px #888888;
+	padding-top: 20px;
 	display: flex;
 	justify-content: flex-start;
 	flex-direction: column;
+	border-top-right-radius: 40px;
+	border-top-left-radius: 40px;
+	border: 0.01px;
+	border-style: dotted;
+	border-color: rgb(255, 255, 255);
+	background-color: #7F7F7F;
+	margin-top: 150px;
+	margin-right: 55px;
+	margin-left: 55px;
+	padding-bottom: 20px;
 
 }
 
 .discoverBox {
-	background-color: rgb(247, 247, 247);
+	margin-top: 10px;
+	background-color: white;
 	display: flex;
 	flex-wrap: wrap;
-	justify-content: flex-start;
+	justify-content: center;
 	flex-direction: column;
+	align-content: stretch;
 
 }
 
-.topBox {
+.rowBox {
 	display: flex;
 	flex-direction: row;
+	align-content: flex-start;
+	justify-content: center;
+	align-items: flex-start;
+	gap: 3%;
 
 }
 
 .shakerBox {
-	padding-left: 50px;
-	padding-top: 50px;
-	width: 50%;
 	display: flex;
-	flex-wrap: wrap;
 	justify-content: flex-start;
 	flex-direction: row;
+
+
 }
 
 .ingCol {
-	width: 150px;
-	height: 300px;
+	width: 200px;
+	padding-top: 20%;
 	gap: 10px 2px;
 	display: flex;
 	justify-content: flex-start;
 	flex-direction: column;
+	align-items: flex-end;
+
 }
 
 .ingShaker {
-	background-color: rgb(72, 72, 72);
+	background-color: white;
 	width: fit-content;
 	height: fit-content;
 	border-radius: 20px;
 	border-width: 2px;
+	border-style: solid;
+	border-color: #888888;
 	display: flex;
 	justify-content: flex-end;
 	align-items: center;
-	box-shadow: 2px 2px 1px #888888;
+	align-content: center;
+	box-shadow: 1px 1px 4px #7F7F7F;
+	;
 }
 
 .ingShakerTitle {
 	padding-right: 5px;
 	padding-left: 15px;
-	color: rgb(255, 255, 255);
-	font-family: "Verdana";
+	color: rgb(127, 127, 127);
+	font-family: "Helvetica";
 	display: flex;
 	justify-content: center;
 	font-size: 14px;
 	align-items: center;
+	text-align: center;
+
 }
 
 .ingShakerBtn {
@@ -67,57 +91,65 @@
 	display: flex;
 	border: 1px;
 	border-width: 0.1px;
-	border-color: rgb(158, 34, 34);
+	border-color: rgb(121, 121, 121);
 	border-style: solid;
 	color: white;
-	background-color: rgb(251, 56, 56);
+	background-color: rgba(127, 127, 127, 0.928);
 	cursor: pointer;
 	align-self: flex-end;
 	align-items: center;
+	align-content: center;
 	justify-content: center;
+	text-align: center;
+
 }
 
 .drinkRow {
 	flex-direction: row;
 	display: flex;
 	justify-content: center;
+
 }
 
-.shakerImg {
-	padding-left: 100px;
-	width: 200px;
-}
 
 .barBox {
-	position: relative;
+	margin-top: 30px;
+	flex-direction: column;
+	display: flex;
 	width: 500px;
 	height: 280px;
 	font-size: 14px;
 	color: rgb(84, 84, 84);
 	text-align: center;
-	font-family: "Verdana";
+	font-family: "Helvetica";
+
+
+
 }
 
 .barCol {
+
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: flex-start;
 	flex-direction: column;
+
+
 }
 
 .barShelf {
-	width: 500px;
-	height: 195px;
-	padding-bottom: 50px;
-	padding-top: 20px;
-	border-radius: 5%;
-	border: 0.01px;
-	border-style: dotted;
-	border-color: rgb(255, 255, 255);
-	box-shadow: 6px 6px 8px #888888;
 
-	background-color: rgb(255, 255, 255);
+	width: 460px;
+	height: 300px;
+	padding-bottom: 30px;
+	padding-top: 20px;
+	border-radius: 20px;
+	border: 3px;
+	border-style: solid;
+	border-color: rgb(127, 127, 127);
+	background-color: white;
 	display: flex;
+	flex-direction: column;
 }
 
 /* Make the image responsive */
@@ -133,9 +165,10 @@
 }
 
 .barRow {
-	padding-left: 50px;
+	padding-left: 20px;
+	padding-right: 20px;
 	width: 420px;
-	gap: 30px 2px;
+	gap: 10px 2px;
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: flex-start;
@@ -152,7 +185,7 @@
 	display: flex;
 	height: 30px;
 	width: 200px;
-	font-family: Verdana;
+	font-family: Helvetica;
 }
 
 .myProfile .profileBar {
@@ -165,12 +198,20 @@
 	top: 40px;
 }
 
-/* ändra The switch - the box around the slider */
+.switchBox {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	padding-left: 50px;
+	margin-right: 55px;
+}
+
+/* https://www.w3schools.com/howto/howto_css_switch.asp */
 .switch {
 	position: relative;
-	display: inline-block;
-	width: 60px;
-	height: 34px;
+	display: flex;
+	width: 88px;
+	height: 48px;
 }
 
 /* Hide default HTML checkbox */
@@ -196,8 +237,8 @@
 .slider:before {
 	position: absolute;
 	content: "";
-	height: 26px;
-	width: 26px;
+	height: 40px;
+	width: 40px;
 	left: 4px;
 	bottom: 4px;
 	background-color: white;
@@ -205,21 +246,20 @@
 	transition: 0.4s;
 }
 
-input:checked + .slider {
+input:checked+.slider {
 	background-color: #2196f3;
 }
 
-input:focus + .slider {
+input:focus+.slider {
 	box-shadow: 0 0 1px #2196f3;
 }
 
-input:checked + .slider:before {
-	-webkit-transform: translateX(26px);
-	-ms-transform: translateX(26px);
-	transform: translateX(26px);
+input:checked+.slider:before {
+	-webkit-transform: translateX(40px);
+	-ms-transform: translateX(40px);
+	transform: translateX(40px);
 }
 
-/* ändra*/
 .slider.round {
 	border-radius: 34px;
 }
@@ -228,23 +268,6 @@ input:checked + .slider:before {
 	border-radius: 50%;
 }
 
-.createBtn {
-	border-radius: 18px;
-	display: flex;
-	font-size: 15pt;
-	border: 1px;
-	border-width: 1px;
-	width: 110px;
-	height: 35px;
-	border-color: rgb(142, 51, 80);
-	border-style: solid;
-	color: white;
-	background-color: rgb(201, 85, 116);
-	cursor: pointer;
-	align-self: flex-end;
-	align-items: center;
-	justify-content: center;
-}
 
 .createBtnBox {
 	display: flex;
@@ -254,15 +277,14 @@ input:checked + .slider:before {
 
 .createTitle {
 	display: flex;
-	align-self: flex-start;
-	justify-content: center;
 	align-items: center;
 	font-size: 28pt;
-	font-family: Verdana;
-	padding-bottom: 10px;
-	padding-top: 10px;
-	color: #454545;
-	box-shadow: 0 4px 6px -6px black;
+	font-family: Helvetica;
+	padding: 20px;
+	color: #ffffff;
+	font-weight: bold;
+	align-self: center;
+
 }
 
 .drinkName {
@@ -271,19 +293,10 @@ input:checked + .slider:before {
 	justify-content: center;
 	align-items: center;
 	font-size: 10pt;
-	font-family: Verdana;
+	font-family: Helvetica;
 	padding-bottom: 30px;
 	font-style: italic;
-	color: #454545;
+	color: #7F7F7F;
+	;
 	padding-top: 10px;
 }
-
-
-.navBar {
-	background-color: #7e7e7e;
-}
-
-.navBarLink {
-	color: white;
-}
-
