--- a/client/src/utils/css/app.css
+++ b/client/src/utils/css/app.css
@@ -9,12 +9,11 @@
 	border: 0.01px;
 	border-style: dotted;
 	border-color: rgb(255, 255, 255);
-	background-color: #7F7F7F;
+	background-color: #7f7f7f;
 	margin-top: 150px;
 	margin-right: 55px;
 	margin-left: 55px;
 	padding-bottom: 20px;
-
 }
 
 .discoverBox {
@@ -25,7 +24,11 @@
 	justify-content: center;
 	flex-direction: column;
 	align-content: stretch;
+}
 
+.communityBox {
+	display: flex;
+	flex-wrap: wrap;
 }
 
 .rowBox {
@@ -45,15 +48,12 @@
 	align-items: flex-start;
 	gap: 3%;
 	margin-left: 55px;
-
 }
 
 .shakerBox {
 	display: flex;
 	justify-content: flex-start;
 	flex-direction: row;
-
-
 }
 
 .ingCol {
@@ -64,7 +64,6 @@
 	justify-content: flex-start;
 	flex-direction: column;
 	align-items: flex-end;
-
 }
 
 .ingShaker {
@@ -79,8 +78,7 @@
 	justify-content: flex-end;
 	align-items: center;
 	align-content: center;
-	box-shadow: 1px 1px 4px #7F7F7F;
-	;
+	box-shadow: 1px 1px 4px #7f7f7f;
 }
 
 .ingShakerTitle {
@@ -93,7 +91,6 @@
 	font-size: 14px;
 	align-items: center;
 	text-align: center;
-
 }
 
 .ingShakerBtn {
@@ -111,16 +108,13 @@
 	align-content: center;
 	justify-content: center;
 	text-align: center;
-
 }
 
 .drinkRow {
 	flex-direction: row;
 	display: flex;
 	justify-content: center;
-
 }
-
 
 .barBox {
 	margin-top: 30px;
@@ -132,24 +126,16 @@
 	color: rgb(84, 84, 84);
 	text-align: center;
 	font-family: "Helvetica";
-
-
-
 }
 
 .barCol {
-
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: flex-start;
 	flex-direction: column;
-
-
 }
 
 .barShelf {
-
-
 	width: 460px;
 	height: 300px;
 	padding-bottom: 30px;
@@ -173,11 +159,10 @@
 }
 
 .barImage:hover {
-	opacity: 1.0;
+	opacity: 1;
 }
 
 .barRow {
-
 	padding-left: 20px;
 	padding-right: 20px;
 	width: 420px;
@@ -261,15 +246,15 @@
 	transition: 0.4s;
 }
 
-input:checked+.slider {
+input:checked + .slider {
 	background-color: #2196f3;
 }
 
-input:focus+.slider {
+input:focus + .slider {
 	box-shadow: 0 0 1px #2196f3;
 }
 
-input:checked+.slider:before {
+input:checked + .slider:before {
 	-webkit-transform: translateX(40px);
 	-ms-transform: translateX(40px);
 	transform: translateX(40px);
@@ -282,7 +267,6 @@ input:checked+.slider:before {
 .slider.round:before {
 	border-radius: 50%;
 }
-
 
 .createBtnBox {
 	display: flex;
@@ -299,7 +283,6 @@ input:checked+.slider:before {
 	color: #ffffff;
 	font-weight: bold;
 	align-self: center;
-
 }
 
 .drinkName {
@@ -311,10 +294,8 @@ input:checked+.slider:before {
 	font-family: Helvetica;
 	padding-bottom: 30px;
 	font-style: italic;
-	color: #7F7F7F;
-	;
+	color: #7f7f7f;
 	padding-top: 10px;
-
 }
 
 .followList {
