--- a/client/src/utils/css/app.css
+++ b/client/src/utils/css/app.css
@@ -2,59 +2,6 @@
 	height: 360px
 }
 
-.shakerimg:hover {
-	/* Start the shake animation and make the animation last for 0.5 seconds */
-	animation: shake 0.5s;
-
-	/* When the animation is finished, start again */
-	animation-iteration-count: infinite;
-}
-
-@keyframes shake {
-	0% {
-		transform: translate(1px, 1px) rotate(0deg);
-	}
-
-	10% {
-		transform: translate(-1px, -2px) rotate(-1deg);
-	}
-
-	20% {
-		transform: translate(-3px, 0px) rotate(1deg);
-	}
-
-	30% {
-		transform: translate(3px, 2px) rotate(0deg);
-	}
-
-	40% {
-		transform: translate(1px, -1px) rotate(1deg);
-	}
-
-	50% {
-		transform: translate(-1px, 2px) rotate(-1deg);
-	}
-
-	60% {
-		transform: translate(-3px, 1px) rotate(0deg);
-	}
-
-	70% {
-		transform: translate(3px, 1px) rotate(-1deg);
-	}
-
-	80% {
-		transform: translate(-1px, -1px) rotate(1deg);
-	}
-
-	90% {
-		transform: translate(1px, 2px) rotate(0deg);
-	}
-
-	100% {
-		transform: translate(1px, -2px) rotate(-1deg);
-	}
-}
 
 
 .colBox {
@@ -103,9 +50,9 @@
 	display: flex;
 	flex-direction: row;
 	align-content: flex-start;
-	justify-content: flex-start;
+	justify-content: space-evenly;
 	align-items: flex-start;
-	gap: 3%;
+	gap: 5%;
 	margin-left: 55px;
 }
 
@@ -191,6 +138,7 @@
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: flex-start;
+	align-items: center;
 	flex-direction: column;
 }
 
@@ -241,21 +189,22 @@
 	top: 30px;
 }
 
-.myProfile .title {
+.title {
 	display: flex;
 	height: 30px;
 	width: 200px;
 	font-family: Helvetica;
 }
 
-.myProfile .profileBar {
+.profileBar {
 	/* display: flex; */
 	padding-left: 30px;
 }
 
-.myProfile .profileInfo {
-	position: absolute;
-	top: 40px;
+.profileInfo {
+	flex-direction: column;
+	display: flex;
+	padding-top: 20px;
 }
 
 .switchBox {
@@ -306,15 +255,15 @@
 	transition: 0.4s;
 }
 
-input:checked + .slider {
+input:checked+.slider {
 	background-color: #2196f3;
 }
 
-input:focus + .slider {
+input:focus+.slider {
 	box-shadow: 0 0 1px #2196f3;
 }
 
-input:checked + .slider:before {
+input:checked+.slider:before {
 	-webkit-transform: translateX(40px);
 	-ms-transform: translateX(40px);
 	transform: translateX(40px);
@@ -359,6 +308,5 @@ input:checked + .slider:before {
 }
 
 .followList {
-	padding-left: 40px;
-	padding-top: 30px;
+	padding-top: 20px;
 }
